Subjects Russia change

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -291,6 +291,10 @@
 
  TAT_western_reform_govern: "Government Reform"
  TAT_western_reform_govern_desc: "Our Government needs urgent reform"
+ TAT_Measures_of_rapprochement_with_the_West: "Measures of Rapprochement with the West"
+ TAT_Measures_of_rapprochement_with_the_West_desc: "The West is our friend. And we will repeat it all the time"
+ TAT_supress_nationalists: "Suppress Nationalists"
+ TAT_supress_nationalists_desc: "The nationalists in our republic are a huge threat to building any kind of working Western-style democracy. We need to stamp them out."
  TAT_western_decentr: "Decentralization"
  TAT_western_decentr_desc: "It's time to give the regions more rights"
  TAT_western_defend_people_rights: "Human Rights And Freedoms"
@@ -364,6 +368,10 @@
  TAT_fight_international_capitalists_desc: "The oligarchs are a dangerous and corrupt class, no better than the kulaks of Soviet times. Since the dissolution of the USSR, the Russian oligarchs have gobbled up more and more economic influence and driven Russian workers out of jobs, in favor of a globalistic economic model powered by foreign companies. To revive Russia, it is first essential to drive out the international capitalist class."
  TAT_better_roads: "General Road Improvement"
  TAT_better_roads_desc: "It is necessary to deal closely with the road problem in our country"
+ TAT_a_new_economic_policy: "A New Economic Policy"
+ TAT_a_new_economic_policy_desc: "The Five-Year Plans while working well, are not working well enough. We need to change things up a little to get the most economic growth."
+ TAT_stalin: "Restalinization"
+ TAT_stalin_desc: "We should once again render honor to Stalin for his role in building socialism and saving human civilization from the eurofascist plague. Today the greatness of Stalin's era is self-evident even to his most furious haters. We will liberate the whole world!"
  TAT_soviet_academy_of_sciences: "Revolutionary Education"
  TAT_soviet_academy_of_sciences_desc: "We must reinforce revolutionary ideals in the classroom, so that the students do not forget what many have died to achieve over several decades."
  TAT_weaken_the_banks: "Weaken the Banks"
@@ -1237,7 +1245,13 @@
  KHM_more_ecology_desc: "We will continue to restore the ecology of our region, investing new funds in the restoration of flora and fauna."
  KHM_federation: "Federation Within a Federation"
  KHM_federation_desc: "We will show you what a Federation should really look like.."
-
+ KHM_a_pragmatic_approach: "A Pragmatic Approach"
+ KHM_a_pragmatic_approach_desc: "While democracy is nice, we cannot go drectly from communists dictatorship to capitalist democracy. Shock therapy will not work and will shatter the new Russian state."
+ KHM_democratic_idealism: "Democratic Idealism"
+ KHM_democratic_idealism_desc: "It is time to leave the ghosts of the pasts behind and pursue democratic reforms at all cost."
+ KHM_Measures_of_rapprochement_with_the_West: "Measures of Rapprochement with the West"
+ KHM_Measures_of_rapprochement_with_the_West_desc: "The West is our friend. And we will repeat it all the time"
+ 
  KHM_commi: "Red Yugra"
  KHM_commi_desc: "Communist ideals have come back to our region."
  KHM_unions: "Work With Unions"
@@ -1250,6 +1264,10 @@
  KHM_oil_desc: "We will continue to explore the bowels of our republic in search of resources."
  KHM_oil_infra_new: "Investing in The Repair of Oil Infrastructure"
  KHM_oil_infra_new_desc: "Our oil infrastructure is very outdated, we intend to invest in its repair and renovation."
+ KHM_socialist_humanism: "Socialist Humanism"
+ KHM_socialist_humanism_desc: ""
+ KHM_a_new_economic_policy: "A New Economic Policy"
+ KHM_a_new_economic_policy_desc: "The Five-Year Plans while working well, are not working well enough. We need to change things up a little to get the most economic growth."
  KHM_zavods: "Construction of New Factories"
  KHM_zavods_desc: "We must create new jobs!"
  KHM_five_year_plan: "First Five Year Plan"
@@ -1612,10 +1630,16 @@
  #Free Bashkiria
  BSH_bashkiria_free_nationalist: "Free Bashkiria"
  BSH_bashkiria_free_nationalist_desc: "Our people are finally free and free to decide their own fate"
+ BSH_a_pragmatic_approach: "A Pragmatic Approach"
+ BSH_a_pragmatic_approach_desc: "While democracy is nice, we cannot go drectly from communists dictatorship to capitalist democracy. Shock therapy will not work and will shatter the new Russian state."
+ BSH_democratic_idealism: "Democratic Idealism"
+ BSH_democratic_idealism_desc: "It is time to leave the ghosts of the pasts behind and pursue democratic reforms at all cost."
  BSH_bashkiria_free_nationalist_polit_nation: "Political Will of The People"
  BSH_bashkiria_free_nationalist_polit_nation_desc: "Our people are now free to decide their own fate and not submit to any metropolises"
  BSH_bashkiria_free_nationalist_freedom_speech: "Freedom of Speech"
  BSH_bashkiria_free_nationalist_freedom_speech_desc: "Now we will strive for genuine democracy and freedom of speech"
+ BSH_Measures_of_rapprochement_with_the_West: "Measures of Rapprochement with the West"
+ BSH_Measures_of_rapprochement_with_the_West_desc: "The West is our friend. And we will repeat it all the time"
  BSH_bashkiria_free_nationalist_reform_delenie: "Territorial Reform"
  BSH_bashkiria_free_nationalist_reform_delenie_desc: "We will change the territorial structure of our republic, for greater convenience in managing it"
  BSH_bashkiria_free_nationalist_yazik: "Bashkir Language is The State Language"
@@ -1624,6 +1648,8 @@
  BSH_bashkiria_free_nationalist_hym_desc: "We will switch to our own currency and use it in settlements with other states"
  BSH_bashkiria_free_nationalist_it: "IT Investments"
  BSH_bashkiria_free_nationalist_it_desc: "We will invest a significant part of our budget in the IT sector"
+ BSH_economic_liberalism: "Free Markets, Free People"
+ BSH_economic_liberalism_desc: "Free markets are the key to lifting our Republic out of poverty. We should get government out of the private sector and let businesses do their thing, without fear or favor from the government."
  BSH_bashkiria_free_nationalist_private: "Protection of Private Property"
  BSH_bashkiria_free_nationalist_private_desc: "Private property in our republic will be protected in all possible ways, we have had enough of collectivism"
  BSH_bashkiria_free_nationalist_army: "People 's Army of Bashkiria"
@@ -1924,6 +1950,10 @@
  BSH_pioneria_desc: "Young people should not be idle, so we will revive the pioneer"
  BSH_Marks_school: "Marxism in Schools"
  BSH_Marks_school_desc: "The school curriculum will necessarily include Marx"
+ BSH_stalin: "Restalinization"
+ BSH_stalin_desc: "We should once again render honor to Stalin for his role in building socialism and saving human civilization from the eurofascist plague. Today the greatness of Stalin's era is self-evident even to his most furious haters. We will liberate the whole world!"
+ TAT_socialist_humanism: "Socialist Humanism"
+ TAT_socialist_humanism_desc: ""
  BSH_free_education: "Free Education"
  BSH_free_education_desc: "Education should be free and free for every citizen of our glorious state"
  BSH_state_atheism: "State Atheism"
@@ -1950,6 +1980,10 @@
  BSH_power_to_the_workers_desc: "We will focus on the working class, which will be the engine of growth of our economy.."
  BSH_ultimate_tax_reform: "Big Tax Reform"
  BSH_ultimate_tax_reform_desc: "We intend to carry out a major tax reform, which will ease the tax burden for ordinary people, but for business it will be the opposite"
+ BSH_socialist_humanism: "Socialist Humanism"
+ BSH_socialist_humanism_desc: ""
+ BSH_a_new_economic_policy: "A New Economic Policy"
+ BSH_a_new_economic_policy_desc: "The Five-Year Plans while working well, are not working well enough. We need to change things up a little to get the most economic growth."
  BSH_single_party: "Single Party"
  BSH_single_party_desc: "The Communist Party of the Bashkortostan knows best in all spheres which relate to the state. If other people get out of the way, we can get to work on building a true Communist utopia, and this time, we will succeed."
  BSH_nationalize_foreign_business: "Nationalize Foreign Business"
