--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1583,6 +1583,15 @@
  south_azeri_liberation_movement: "South Azerbaijan Liberation Movement"
  south_azeri_liberation_movement_DEF: "South Azerbaijan Liberation Movement"
  south_azeri_liberation_movement_ADJ: "South Azeri"
+ PER_Zoroastrian_Flag: "Zoroastrian Solidarity Movement"
+ PER_Zoroastrian_Flag_DEF: "Yazd Underground Army"
+ PER_Zoroastrian_Flag_ADJ: "Iranian"
+ PER_Zoroastrian_state_Flag: "ērān"
+ PER_Zoroastrian_state_Flag_DEF: "ērān "
+ PER_Zoroastrian_State_Flag_ADJ: "Iranian"
+ PER_Zoroastrian_Empire_Flag: "IDFK Some Empire"
+ PER_Zoroastrian_Empire_Flag_DEF: "IDFK Some Empire"
+ PER_Zoroastrian_Empire_Flag_ADJ: "Iranian"
 # ARTESH AUTHORITY TAGS
  PER_ARTESH_CONTROL: "Artesh Authority of Iran"
  PER_ARTESH_CONTROL_DEF: "the Artesh Authority of Iran"
@@ -3731,7 +3740,7 @@
  HEZ_amel: "Jabal Amil"
  HEZ_amel_ADJ: "Hezbollahi"
  HEZ_amel_DEF: "the Jabal Amil"
- 
+
  #Ryukyu
  RYU_JAP_democratic_autonomy_associated_state: "Okinawa Autonomous Province"
  RYU_JAP_democratic_autonomy_associated_state_DEF: "The Okinawa Autonomous Province"
