--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -339,7 +339,7 @@
  SPR_COMMUNIST_REVISIONISM_DESC: "Spain will try to push towards the communist parties."
  SPR_THE_OLD_WAYS: "The Old Ways"
  SPR_THE_OLD_WAYS_DESC: "Spain will seek to revive the Spanish Empire."
- 
+
  #Iran
  PER_AI_BEHAVIOR: "@PER Iran"
  PER_REVOLUTIONARY_PERSIA: "The Return of Pahlavi"
@@ -350,7 +350,10 @@
  PER_FIRE_HAS_NO_FRIENDS_IRAN_DESC: "The MEK will cease power in Iran in an attempt to create a peoples republic."
  PER_NO_REVOULT_IRAN: "No Revolutions"
  PER_NO_REVOULT_IRAN_DESC: "Iran will develop peacefully and without revolutions."
- 
+ RULE_PER_ZOROASTRIAN_STATE: "Zoroastrian Resurgence"
+ RULE_PER_ZOROASTRIAN_STATE_ALLOWED_DESC: "During the Zoroastrians could be a playable faction"
+ RULE_PER_ZOROASTRIAN_STATE_BLOCKED_DESC: "The Zoroastrians will not spawn"
+
  #Georgia
  GEO_AI_BEHAVIOR: "@GEO General Georgian Behavior"
  GEO_NATIONALIST_behavior: "@GEO Nationalist's behavior"
@@ -421,7 +424,7 @@
  BLR_WONT_FOLLOW_UNION_STATE_DESC: "Belarus won't form Union State and won't become a Russian puppet."
  BLR_WILL_FOLLOW_UNION_STATE: "Form Union State"
  BLR_WILL_FOLLOW_UNION_STATE_DESC: "Belarus will try to form Union State. At first they will become a Russian puppet, but later..."
- 
+
  #Transnistria
  PMR_ai_behavior: "@PMR Transnistria Behavior"
  PMR_HISTORIC_DEFAULT: "Historical Path"
@@ -482,7 +485,7 @@
  POL_KORWIN_PE_DESC: "Poland will support UPR party, win as Korwin, join Ukraine to NATO and reform Polish-Lithuanian Commonwealth."
  POL_WALESA: "Wałęsa President Again"
  POL_WALESA_DESC: "Poland will support ChDRP party, win as Wałęsa and choose its future."
- 
+
  #Germany
  GER_AI_BEHAVIOR: "@GER Federal Republic of Germany"
  RULE_OPTION_GER_CONSERVATIVE: "Conservative"
