--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -338,6 +338,7 @@
  democratic_champion: "Democratic Champion"
  general_secretary: "the General Secretary"
  shahanshah: "Shahanshah Aryamehr"
+ transparent: "Transparent Leader"
  educator: "Educator"
  protector_of_german_culture: "Protector of German Identity"
  transitional_government: "Transitional Government"
