--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -903,6 +903,7 @@
  full_control_of_suez: "Suez Canal Authority"
  full_control_of_suez_desc: "The Suez Canal is controlled and operated by the Suez Canal Authority. The Authority's revenue in tolls alone is 5 billion USD per year. While the Suez is, by international treaties, open to both civilian and military vessels alike, it can easily be used to control shipping between Asia and Europe"
  full_control_of_suez_idea_TT: "Additional Income: $§G0.100§!"
+ full_control_of_hormuz_idea_TT: "Additional Income: $§G0.800§!"
  partial_control_of_suez: "Suez Canal Authority - Shared Ownership"
  partial_control_of_suez_desc: "The Suez Canal is controlled and operated by the Suez Canal Authority. The Authority's revenue in tolls alone is 5 billion USD per year. While the Suez is, by international treaties, open to both civilian and military vessels alike, it can easily be used to control shipping between Asia and Europe. The Suez Canal is currently under joint authority between two countries"
  partial_control_of_suez_idea_TT: "Additional Income: $§G0.050§!"
