--- a/localisation/french/equipment_l_french.yml
+++ b/localisation/french/equipment_l_french.yml
@@ -3429,7 +3429,7 @@
  PER_util_vehicle_2: "Sepehr"
  PER_util_vehicle_3: "Aras"
  PER_util_vehicle_4: "DIO MRAP" #yet unnnamed
- PER_util_vehicle_5: "DIO Rubah"
+ PER_util_vehicle_5: "Toofan"
 
  PER_SP_R_arty_0: "Hadid HM-20"
  PER_SP_R_arty_1: "Fajr-3"
