--- a/localisation/english/MD_focus_USB_l_english.yml
+++ b/localisation/english/MD_focus_USB_l_english.yml
@@ -432,7 +432,7 @@ FSA_america_complacency_act_desc: "Despite the euphamistic naming, the Complacen
 FSA_america_military_ready_economy: "Military Ready Economy"
 FSA_america_military_ready_economy_desc: "With the string of development schemes under way and things looking more stable in terms of civilian and military affairs, we can now focus on our adaptability. Fine tuning our currrent economic development to be ready and raring to go if a foe should even think about declaring war on us. This will be a bit unpopular with the civilian population but it is a sacrifice we are willing to make."
 FSA_america_establishing_the_department_of_energy: "The Department Of Energy"
-FSA_america_establishing_the_department_of_energy_desc: "The DoE is a branch of the DoIA which focuses on the energy needs of the nation. How to produce, where to construct new facilities, infrastructure maintainence and so forth."
+FSA_america_establishing_the_department_of_energy_desc: "The DoE is a branch of the DoIA which focuses on the energy needs of the nation. How to produce, where to construct new facilities, infrastructure maintenance and so forth."
 FSA_america_tried_and_tested_development: "Tried And Tested Development"
 FSA_america_tried_and_tested_development_desc: "The old reliables of the fossil fuel industries are still relavent, despite the opposition this may have with the tree huggers we can still satisfy the majority through cheap and effective power. We may even spice it up with some renewables if the agitation gets too annoying."
 FSA_america_innovation_station_plan: "Innovation Station Plan"
