--- a/Changelog.txt
+++ b/Changelog.txt
@@ -49,7 +49,7 @@ v1.10.0
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
   - Better focus filters for Wagner.
-  - Fixed Rojava Libertarian party name showing up as ROJ.Neutral_LIbertarian
+  - Fixed Rojava Libertarian party name showing up as ROJ.Neutral_Libertarian
   - Fixed AI not getting 2035 light tank hull template
   - Fixed the event description of the Korean focus "Demand an End to America's Presence"
   - Tweaked effect of the focuses of South Korean Aircraft caused by BBA dlc
