--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1682,6 +1682,19 @@
  PER_EGY_GOVERNATE_ADJ: "the Iranian Governate of Egypt"
  PER_EGY_GOVERNATE_DEF: "Egyptian"
 # # # # #
+ #IRQ
+ IRQ_sunni_revolt_name: "Iraqi Freedom Front"
+ IRQ_sunni_revolt_name_DEF: "the Iraqi Freedom Front"
+ IRQ_sunni_revolt_name_ADJ: "Iraqi"
+
+ IRQ_shia_revolt: "Jaysh Al-Mahdi"
+ IRQ_shia_revolt_DEF: "Jaysh Al-Mahdi"
+ IRQ_shia_revolt_ADJ: "Iraqi"
+
+ IRQ_badr_revolt: "Munazzama Badr"
+ IRQ_badr_revolt_DEF: "Munazzama Badr"
+ IRQ_badr_revolt_ADJ: "Iraqi"
+# # # # #
  #BAN
  BAN_REB_democratic: "Bangladesh Armed Forces"
  BAN_REB_democratic_ADJ: "Bangladeshi"
