--- a/localisation/english/MD_custom_achievements_l_english.yml
+++ b/localisation/english/MD_custom_achievements_l_english.yml
@@ -167,6 +167,8 @@
  form_the_baltic_states_DESC: "Form the Baltic States as Estonia, Latvia, or Lithuania."
  unite_the_nordic_people_NAME: "Form Scandinavia"
  unite_the_nordic_people_DESC: "Form Scandinavia as Sweden, Denmark, Norway, or Finland."
+ chiraq_NAME: "Chiraq"
+ chiraq_DESC: "As Iraq take control of Illinois (Chiraq)"
  u_ar_great_NAME: "U AR Great"
  u_ar_great_DESC: "Unite either the United Arab Republic or the Federation of Arab Republics"
  lawrence_of_arabia_NAME: "Lawrence of Arabia"
