--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -2157,6 +2157,8 @@
 
 
  ###Ideas
+ USA_iraq_war_cost: "The Iraq War"
+ USA_iraq_war_cost_desc: "The Iraq War has rocked with relative failure. Our efforts to continue the war will now cost us a considerable amount of money for some time, as we must scrap together money for the equipment and manpower required."
  petro_dollar: "The Petro Dollar"
  petro_dollar_desc: "A Petro Dollar is a US dollar that has been used to purchase crude oil. The United States Dollar (USD) has been the world's petrodollar since the mid-1970s when oil prices generated large trade and current account surpluses. The position has solidifed the dominance of the United States dollar on the global stage and it makes for easy and convenient."
  USA_the_internet_recession: "The 2001 Recession"
@@ -2306,6 +2308,7 @@
 
  #Tooltips
  isis_subsidies_tt: "Add §Y$[?isis_subsidies|0] Billion§! to our Treasury\n"
+ USA_iraq_war_cost_TT: "§R$2.000§! §YBillion§! contributed weekly to the §YIraq War§!.\n"
 
  NASA_tt: "Modify §YSpace Focuses§! by\nPolitical Power: §G+50§! to §G+150§!\n"
  private_space_ventures_tt: "Modify §YSpace Focuses§! by\nCost: §G-50%§!\n"
