--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -72,6 +72,7 @@
 
  # Oligarchs
  NIG_oligarchs: "Tribal Leaders"
+ IRQ_oligarchs: "[IRQ.GetAdjective] Kleptocracy"
  SOV_oligarchs: "[SOV.GetAdjective] Entrepreneurs"
  CSA_oligarchs: "Confederate Landowners"
  oligarchs: "Oligarchs"
@@ -126,6 +127,7 @@
  QAT_the_military: "Qatar Armed Forces"
  SAU_the_military: "Armed Forces of [SAU.GetNameDef]"
  PER_the_military: "Artesh-e Irân"
+ IRQ_the_military: "[IRQ.GetAdjective] Armed Forces"
  UAE_the_military: "[UAE.GetName] Armed Forces"
  the_military: "The Military"
  the_military_desc: "Throughout history, the military has been extremely influential in the politics of many nations. When generals and admirals find themselves in positions of civilian leadership, they give the unprecedented military control over the country."
@@ -141,6 +143,7 @@
 
  # Intelligence Community
  GER_intelligence_community: "Bundesnachrichtendienst"
+ IRQ_intelligence_community: "Mukhabarat"
  CHI_intelligence_community: "Ministry of State Security"
  SOV_intelligence_community: "[SOV_FSS_FSC]"
  BLR_intelligence_community: "State Security Committee of the Republic of Belarus"
@@ -252,6 +255,7 @@
  UKR_labour_unions: "Confederation of Free Trade Unions of Ukraine"
  USA_labour_unions: "AFL-CIO"
  VER_labour_unions: "Council of Free Labour Unions"
+ IRQ_labour_unions: "General Federation of Trade Unions"
  labour_unions: "Labour Unions"
  labour_unions_desc: "When highly organized, active, and influential in politics, labor unions representing the workers will impact a country's domestic politics to the dismay of business owners and industrial conglomerates."
  labour_unions_dynamic_modifier: "£pol_idea $labour_unions$"
