--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -840,8 +840,8 @@
  IRQ.liberalism_2017: "£IRQ_liberalism_2017_small Iraqi National Movement"
  IRQ.liberalism_2017_icon: "£IRQ_liberalism_2017_small"
  IRQ.liberalism_2017_desc: "Liberal - The Iraqi National Movement was a coalition founded on the basis of secularism and non-sectarianism, with a mix of some Iraqi Nationalism. It is comprised of some of Iraq's largest secular parties, including Al Wataniya."
- IRQ.socialism: "£IRQ_national_congress Al-Moutammar Al-Watani"
- IRQ.socialism_icon: "£IRQ_national_congress"
+ IRQ.socialism: "£IRQ_national_congressa Al-Moutammar Al-Watani"
+ IRQ.socialism_icon: "£IRQ_national_congressa"
  IRQ.socialism_desc: "Welfare State - The Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
  IRQ.conservatism: "£IRQ_conservatism_small"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
@@ -860,6 +860,9 @@
  IRQ.Neutral_conservatism_2017: "£IRQ_Neutral_conservatism_small Victory Alliance"
  IRQ.Neutral_conservatism_2017_icon: "£IRQ_Neutral_conservatism_small"
  IRQ.Neutral_conservatism_2017_desc: "Conservative - Victory Alliance. Losing the struggle for leadership in the Islamic Dawa Party, former PM Haider al-Abadi founded the Victory Alliance as his personal political vehicle. It is a reasonably moderate and pragmatic Shiite Islamist Party, though with a legacy of sectarianism from al-Abadi time as Prime Minister."
+ IRQ.Neutral_Autocracy: "£generic_Neutral_Autocracy_small (§HCPA§!) Coalitional Provisional Authority"
+ IRQ.Neutral_Autocracy_desc: "The Coalitional Provisional Authority has been established in order to transition Iraq into a better form of governance established the vote of the Iraqi people."
+ IRQ.Neutral_Autocracy_icon: "£generic_Neutral_Autocracy_small"
  IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small Al-hizb aš-šiyū'ī al-'irāqī"
  IRQ.Neutral_Communism_icon: "£IRQ_Neutral_Communism_small"
  IRQ.Neutral_Communism_desc: "Communist - The Iraqi Communist Party has long dominated leftist politics in Iraq. It's uneasy alliance with the Ba'ath Party, brokered by the Soviet Union, broke down in 1979, and it has since advocated armed struggle. It is secular and socialist."
@@ -878,6 +881,9 @@
  IRQ.Nat_Autocracy: "£IRQ_armed_forces Riasat Arkan Aljaysh Aleiraqiu"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
  IRQ.Nat_Autocracy_desc: "Military Junta - The Armed forces of Iraq were formed in the early 1930's, and have been involved in various political activities ranging from coups, including the one which saw the overthrow of the Hashemite Dynasty,"
+
+ IRQ.Autocracy: "£IRQ_mahdi_army  Jaysh Al-Mahdi"
+ IRQ.Autocracy_desc: "Shi'ite Militarism - The Mahdi army rose to prominance when it came to confronting foreign or hostile elements within Iraq, with the group being led by Muqtada Al-Sadr. The group cooperates with other Shi'ite Militias, such as the Badr Brigades."
 
  IRQ.Monarchist: "£IRQ_monarch Al-Hāshimiyyūn"
  IRQ.Monarchist_desc: "Monarchism - The Hashemite Dynasty in Iraq had ruled from 1921 to 1958, having been overthrown by the military. Currently, the title for the head of the house is held by Ra'ad bin Zeid."
@@ -944,6 +950,8 @@
  KOR.Monarchist_desc: ""
 
  ### Kurdistan ###
+ KUR.Neutral_Communism: "£KUR_Neutral_Communism_small  Partiya Komunîst a Kurdistanê"
+ KUR.Neutral_Communism_desc: "Partiya Komunîst a Kurdistanê is a Kurdish political party, formed in 1993 when the Iraqi Communist Party branch in the Kurdish areas was formed into a separate party."
  KUR.conservatism: "£KUR_conservatism_small KDP"
  KUR.conservatism_icon: "£KUR_conservatism_small"
  KUR.conservatism_desc: "Conservatism - Partiya Demokrat a Kurdistanê (Kurdistan Democratic Party) is a conservative Kurdish nationalist party dominated by the Barzani Clan. Controlling large parts of the Kurdish Peshmerga (Pêşmerge), has been a dominating force in Iraqi Kurdish warfare and poltitics. While its main historic backer has been Iran, it has since branched out and recieves significant American, Turkish and Israeli support. Following the end to the KRG Civil War, the party controlled the majority of northern Iraqi Kurdistan."
@@ -954,9 +962,6 @@
  KUR.oligarchism_icon: "£KUR_oligarchism_small"
  KUR.oligarchism_desc: "Oligarchism - Yekêtiy Niştîmaniy Kurdistan (Patriotic Union of Kurdistan) is a syncretic Kurdish party founded as a more leftist alternative that remains in opposition to the domination of the powerful Barzani-Clan of the KDP. It effectively controls the south of Iraqi Kurdistan following the end of the KRG Civil War, and remains in control of large Peshmerga forces. It has remained more pragmatic on the issue on outright Kurdish independence than the KDP and has increased ties with Iran as KDP-Iran relations have cooled."
  KUR.neutral_Social: "£generic_neutral_Social_small Socialist Democratic Party"
- KUR.Neutral_Communism: "£KUR_Neutral_Communism_small KCK"
- KUR.Neutral_Communism_icon: "£KUR_Neutral_Communism_small"
- KUR.Neutral_Communism_desc: "Democratic Confederalism - Koma Civakên Kurdistan (Kurdistan Communities Union) is a pan-Kurdish umbrella organisation seeking to spread and foster the ideology of its founder Abdullah Öcalan, called Democratic Confederalism, across all of Kurdistan. The KCK is dominated by the PKK - a Kurdish group originally founded in 1978 as a Marxist-Leninist group by Kurdish students in Turkey, led by Abdullah Öcalan, that has engaged the Turkish state in a bloody insurgency since the early 80's. The KCK seeks to widen the PKK's struggle and ideology to all four parts of Kurdistan, and its headquarters lies deep in the Qandil mountains of Iraqi Kurdistan. It is in opposition to both the KDP and PUK due to their close relations with Turkey and seeks to replace their power and influence in Iraqi Kurdistan and beyond, pitting it in a tense rivalry with the KDP especially. Although they no longer profess Marxism-Leninism, they remain a far-left group, seeking the end of capitalism and establishing a decentralized, feminist socialist society through Democratic Confederalism, an anarchist leaning ideology inspired by Murray Bookchin's Communalism."
  KUR.anarchist_communism: "£KUR_anarchist_communism_small PKK"
  KUR.anarchist_communism_icon: "£KUR_anarchist_communism_small"
  KUR.anarchist_communism_desc: "Left-Wing Radical - Partiya Karkeren Kurdistane (Kurdistan Workers' Party). Founded by Kurdish students in Turkey led by Abdullah Öcalan, the PKK has remained in a bloody insurgency against Turkey for most of it's history. While primarially active in Turkey it has branches and militant training camps in Iraqi Kurdistan. It is in opposition to both the KDP and PUK due to their desire for peace and trade with Turkey. They are a far-left group, seeking the end of capitalism and establishing a decentralized democratic socialist society."
@@ -7867,6 +7872,8 @@
  SYR.Conservative: "£generic_Conservative_small Arab Democratic Party"
  SYR.oligarchism: "£generic_oligarchism_small Arab Democratic Party"
  SYR.Western_Autocracy_Alternative: "£generic_Western_Autocracy_small Arab Democratic Party"
+ SYR.Nat_Populism_Alternative: "£generic_Nat_Populism_small Arab Democratic Party"
+ SYR.Nat_Populism_Baath: "£generic_Nat_Populism_small Syrian Ba'ath Party (Pro-Iraq Wing)"
  SYR.Nat_Fascism_Alternative: "£generic_Nat_Populism_small Arab Democratic Party"
  #Actual Syrian parties
  SYR.Western_Autocracy: "£SYR_Western_Autocracy Reform Party of Syria"
@@ -7904,6 +7911,12 @@
  SYR.neutral_Social_desc: "The Democratic Socialist Unionist Party is a political party in Syria. It is part of the National Progressive Front of legally licensed parties which support the socialist and Arab nationalist orientation of the government and accept the leadership of the Ba'ath Party"
  SYR.Neutral_Communism: "£generic_Neutral_Communism_small People's Will Party"
  SYR.Neutral_Communism_desc: "The People's Will Party is a political party made up of expelled members of the £SYR_Communist_State Syrian Communist Party. In organization, the People's Will Party follows democratic centralism. Nonetheless, it has no assignment for a Secretary General; instead, a collective leadership of the members of the Central Council that are elected in the General Conference rules the party. The Central Council elects its members of the Presidium and members of the Secretariat to undertake daily tasks"
+ SYR.Nat_Populism: "£IRQ_Nat_Autocracy_small Syrian Ba'ath Party (Iraqi Wing)"
+ SYR.Nat_national_covenent: "£generic_Nat_Populism_small National Covenant Party"
+ SYR.Nat_Populism_desc: "The National Covenant Party is a nationalist political party in Syria. It is part of the National Progressive Front of parties which support the orientation of the ruling Ba'ath Party. The party believes in Arab nationalism, the objective of the party is to promote Syrian national unity and social peace on democratic foundations based on political, economic and social pluralism and participation of all in decision-making"
+ SYR.Nat_Fascism: "£SYR_Nat_Fascism Syrian Social Nationalist Party"
+ SYR.Nat_Fascism_icon: "£SYR_Nat_Fascism"
+ SYR.Nat_Fascism_desc: "The Syrian Social Nationalist Party (SSNP) is a nationalist political party operating in Lebanon, Syria, Jordan, Iraq and Palestine. It advocates the establishment of a Syrian nation state spanning the Fertile Crescent, including present day Syria, Lebanon, Iraq, Kuwait, Jordan, Palestine, Israel, Cyprus, Sinai, southeastern Turkey, based on geographical boundaries and the common history people within the boundaries share. With over 100,000 it is the second largest legal political group in Syria after the ruling Arab Socialist Ba'ath Party, In Lebanon, it has been a major secular and highly organised elite party in the political history of the country for over 80 years."
  SYR.Nat_Populism: "£SYR_Nat_Fascism Syrian Social Nationalist Party"
  SYR.Nat_Populism_icon: "£SYR_Nat_Fascism"
  SYR.Nat_Populism_desc: "The Syrian Social Nationalist Party (SSNP) is a nationalist political party operating in Lebanon, Syria, Jordan, Iraq and Palestine. It advocates the establishment of a Syrian nation state spanning the Fertile Crescent, including present day Syria, Lebanon, Iraq, Kuwait, Jordan, Palestine, Israel, Cyprus, Sinai, southeastern Turkey, based on geographical boundaries and the common history people within the boundaries share. With over 100,000 it is the second largest legal political group in Syria after the ruling Arab Socialist Ba'ath Party, In Lebanon, it has been a major secular and highly organised elite party in the political history of the country for over 80 years."
