--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -111,6 +111,15 @@
  faction_mto_alliance_join_faction_rule_tt: "§ROnly some countries in Middle East and North Africa can join MTO!§!"
  faction_mto_alliance_offer_join_faction_rule_tt: "§ROnly some countries in Middle East and North Africa can join MTO!§!"
 
+ fao_alliance: "FAO"
+ faction_fao_alliance: "FAO Member"
+ faction_fao_alliance_desc: "This nation is a member of the FAO (Front Against Oppression) alliance, which has made its primary goal defeating western (who they deem to be the oppressors) influence and presence in the middle eastern region. They also seek to unite muslim nations under one alliance to rival the powers of the world."
+ faction_fao_TT: "§RFaction Special Rules§!:\n- Only Shi'ite nations are allowed to join the FAO\n- Countries can only be called to defensive wars"
+ faction_fao_alliance_call_ally_rule_tt: "§R FAO Alliance members can only call allies in defensive wars!§!"
+ faction_fao_alliance_join_ally_rule_tt: "§R FAO members can only join allies in defensive wars!§!"
+ faction_fao_alliance_join_faction_rule_tt: "§R!§!"
+ faction_fao_alliance_offer_join_faction_rule_tt: "§ROnly Shi'ite nations can join FAO!§!"
+
  chinese_united_front: "Chinese United Front"
  faction_chinese_united_front: "Chinese United Front"
  faction_chinese_united_front_desc: "China has united all Chinese nations once again to fight against common threats."
