--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -327,7 +327,7 @@
  PER_the_debate_desc: "The Sustainable Development Goals (SDGs), also known as the 2030 Agenda for Sustainable Development, is a set of seventeen global goals for 169 specific areas developed by the United Nations during a deliberative process involving its 193 member states on 25 September 2015. As one of the members of the United Nations, we agreed to carry out the agenda, and now we will act upon our words."
  PER_the_ministry_of_defense: "[ROOT.PER_ministry_defense_localization_name]"
  PER_the_ministry_of_defense_desc: "[ROOT.PER_ministry_defense_localization_desc]"
- PER_ministry_defense_localization_name: "The Ministery of Defense"
+ PER_ministry_defense_localization_name: "The Ministry of Defense"
  PER_ministry_defense_localization_desc: "The Ministry of Defence and Armed Forces Logistics is the defence ministry of the Islamic Republic of Iran and part of the country's executive branch."
  PER_new_ministry_defense_localization_name: "The Ministery of Defense"
  PER_new_ministry_defense_localization_desc: "The Ministry of Defence and Armed Forces Logistics is the defence ministry of Iran and part of the country's executive branch."
