--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -2771,8 +2771,8 @@
  PER_migrant_workers_desc: "We have begun handing out work visas more those that are willing to help improve our nation through hard work."
  full_control_of_hormuz: "Strait of Hormuz Authority"
  full_control_of_hormuz_desc: "Our nation holds total control over the Strait of Hormuz, allowing us to collect taxes on incoming ships and cargo."
- PER_incompetant_join_chiefs_of_staff: "Incompetent Join Chiefs of Staff"
- PER_incompetant_join_chiefs_of_staff_desc: "The incompetence of the Artesh, and it's Joint Chiefs of Staff was exposed in the wake of the second Iranian revolution. This was due to several factors, one of which being the division of the Iranian army into 2 forces. This lack of leadership and the obvious incompetence has put a massive strain on the command structure and will make conducting any sort of operation a logistical nightmare.\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we complete the §HWar University§! focus."
+ PER_incompetant_joint_chiefs_of_staff: "Incompetent Joint Chiefs of Staff"
+ PER_incompetant_joint_chiefs_of_staff_desc: "The incompetence of the Artesh, and it's Joint Chiefs of Staff was exposed in the wake of the second Iranian revolution. This was due to several factors, one of which being the division of the Iranian army into 2 forces. This lack of leadership and the obvious incompetence has put a massive strain on the command structure and will make conducting any sort of operation a logistical nightmare.\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we complete the §HWar University§! focus."
  PER_IRG_issue: "IRGC Remnants"
  PER_IRG_issue_desc: "Remannts of the IRGC have decided to break into small pockets around the nation, and wage a guerilla style war against our government. They are causing a lot of problems for our conventional military, and soon they can even cause another civil war/revolution if they keep up with their ways..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we completely end the §HIRGC Insurgency§! and secure §HIranian Unity§!."
  PER_technopolitic: "Technopolitic"
