--- a/Changelog.txt
+++ b/Changelog.txt
@@ -108,7 +108,7 @@ v1.10.0
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America, Iraq
-  - NEW REWORKED TREES: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark, Norway, France, United States of America, Iran
+  - NEW REWORKED/IMPROVED TREES: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark, Norway, France, United States of America, Iran
   - NEW TAGS: RYU, VOJ, CAB, LAG
   - The Union state of Russia and Belarus gives more national spirits during the annexation
   - Some decisions have been removed from the mechanics of the Russian subjects
