--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -3072,24 +3072,24 @@
  PER_protection_for_bahais_desc: "The Baha'is have been under heavy oppression under the past few regimes. Our government will now ensure their safety and survival."
  PER_financial_empowerment: "Financial Empowerment"
  PER_financial_empowerment_desc: "We will have to financially empower women to get to work so that our society as a whole is more inclusive and efficient."
- PER_repeal_discriminatory_policies: "Repeat Discriminatory Policies"
+ PER_repeal_discriminatory_policies: "Repeal Discriminatory Policies"
  PER_repeal_discriminatory_policies_desc: "Some of our policies have been deemed discriminatory against certain people, and thus must be thrown out."
  PER_summit_with_western_leaders: "Summit with Western Leaders"
  PER_summit_with_western_leaders_desc: "We will hold a summit with the 4 major western leaders to discuss possible economic investments and opportunities."
  PER_the_peaceful_program: "Leveraging Investments"
- PER_the_peaceful_program_desc: "The investments that flow into our nation cannot go to waste, and we must capitilize on the new flow of capital coming into our nation."
+ PER_the_peaceful_program_desc: "The investments that flow into our nation cannot go to waste, and we must capitalize on the new flow of capital coming into our nation."
  PER_reaffirm_isolationism: "Reaffirm Isolationism"
  PER_reaffirm_isolationism_desc: "Iran cannot align itself with any power, as everyone wishes to bring our land harm for their own benefit."
  PER_redouble_militarism: "Defensive Militarism"
  PER_redouble_militarism_desc: "The defense of the state is a very crucial and sensitive matter, and we must redouble our militaristic efforts in order to up our security."
  PER_front_against_oppression: "Front Against Oppression"
- PER_front_against_oppression_desc: "We will create a front against oppression in the region, allowing for more opportunties to open up for every citizen in the middle east."
+ PER_front_against_oppression_desc: "We will create a front against oppression in the region, allowing for more opportunities to open up for every citizen in the middle east."
  PER_syrian_brothers: "Syrian Friends"
  PER_syrian_brothers_desc: "Our friends in Syria have been long oppressed by their current regime, and many more before it. It is our duty to fund the Free Syrian Army and allow for our friends to fight back against their oppressors."
  PER_utilize_syrian_ports: "Utilize Syrian Ports"
  PER_utilize_syrian_ports_desc: "We need to utilize Syrian ports so that we may deploy our troops in the levant."
  PER_rebuild_iranian_navy: "Rebuild the Iranian Navy"
- PER_rebuild_iranian_navy_desc: "The Iranian Navy has been plundered, and destroyed. Its our job to restore it to its once prestine condition by purchasing new ships from the United States."
+ PER_rebuild_iranian_navy_desc: "The Iranian Navy has been plundered, and destroyed. Its our job to restore it to its once pristine condition by purchasing new ships from the United States."
  PER_afghan_brothers: "Afghan Brothers"
  PER_afghan_brothers_desc: "Our brothers in Afghanistan have been fighting a war against the Taliban, and we must tap into this relationship to utilize their expertise."
  PER_defensive_lessons: "Defensive Infrastructure"
@@ -4656,8 +4656,8 @@
 
  iran_md.238.t: "The Bahá'í Faith"
  iran_md.238.d: "The Baha'i in our nation have long suffered from oppression, and injustices. It is time that our government finally takes the proper measures to give them their rights that they have been depraved of for so long, and possibly more."
- iran_md.238.a: "Grant them their Rights"
- iran_md.238.b: "Grant them their Rights and Representation in the Majlis"
+ iran_md.238.a: "Grant them equal rights"
+ iran_md.238.b: "Grant them equal Rights and Representation in the Majlis"
 
  iran_md.239.t: "[PER.GetFlag] [PER.GetName] Requests bases in Strategic Locations"
  iran_md.239.d: "The Iranians have requested to construct a port in Tartus in exchange for a batch of bases."
