added PMR subject Russia mechanic

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -107,8 +107,10 @@
  SUB_union_state_desc: "We will also participate in the coordination of projects of the Union State of Russia and Belarus"
  SUB_gay_propaganda_laws: "Gay Propaganda Laws"
  SUB_gay_propaganda_laws_desc: "If love is love, then water is water. So why don't you drink from the toilet?"
- SUB_uchneia_s_br: "Allied Determination — exercises"
- SUB_uchneia_s_br_desc: "Joint military exercises of the Armed Forces of the Russian Federation and the Armed Forces of the Republic of Belarus."
+ SUB_uchneia_s_br: "Conduct Exercises With Belarus"
+ SUB_uchneia_s_br_desc: "We will conduct joint exercises of our troops and the troops of the Republic of Belarus for combat coordination"
+ SUB_uchneia_s_ser: "Conduct Exercises With Serbia"
+ SUB_uchneia_s_ser_desc: "We will conduct joint exercises of our troops and the troops of the Serbia for combat coordination"
  SUB_aggressive: "Aggressive Foreign Policy"
  SUB_aggressive_desc: "We will actively support the policy of our president anywhere in the world to make our common home a great country.."
  SUB_z: "Z Propaganda"
@@ -158,6 +160,8 @@
  SUB_russia_cuba_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
  SUB_russia_uzb: "Russia - Uzbekistan"
  SUB_russia_uzb_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
+ SUB_russia_kazah: "Russia - Kazakhstan"
+ SUB_russia_kazah_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
 
  SUB_trade_islam_tt: "We will get §Yaccess§! to §Ytrade deals§! with some countries of the §GIslamic world§!"
  SUB_trade_belarus_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[BLR.GetNamewithFlag]§!"
@@ -165,6 +169,7 @@
  SUB_trade_cuba_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[CUB.GetNamewithFlag]§!"
  SUB_trade_uzbek_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[UZB.GetNamewithFlag]§!"
  SUB_trade_czech_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[CZE.GetNamewithFlag]§!"
+ SUB_trade_kazah_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[KAZ.GetNamewithFlag]§!"
 
 
  SUB_min_obr: "Ministry of Education"
@@ -656,6 +661,7 @@
  BSH_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
  BSH_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  BSH_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
+ BSH_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
  BSH_clear_air: "Request Participation in The "Clean Air" Program"
 
  TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural"
@@ -668,12 +674,14 @@
  TAT_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  TAT_world_cuba: "Partnership with: [CUB.GetNameWithFlag]"
  TAT_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
+ TAT_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
  TAT_clear_air: "Request Participation in The "Clean Air" Program"
 
  KHM_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
  KHM_world_uzbek: "Partnership with: [CHI.GetNameWithFlag]"
  KHM_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  KHM_world_czech: "Partnership with: [CZE.GetNameWithFlag]"
+ KHM_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
  KHM_clear_air: "Request Participation in The "Clean Air" Program"
  
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
@@ -683,8 +691,10 @@
  CHE_attack_pol: "Propose An Attack On [POL.GetNameWithFlag]"
  CHE_unite_ing_last: "Request For The Creation Of Chechen-Ingush Republic"
 
-
  PMR_attack_mlv: "Propose An Attack On [MLV.GetNameWithFlag]"
+ PMR_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
+ PMR_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
+ PMR_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
 
  subject_rus.1.t: "Exclusion from the Federation Council"
  subject_rus.1.d: "We have officially become members of the Federation Council. Now we can participate more actively in the domestic and possibly foreign policy of our country"
@@ -883,6 +893,17 @@
  subject_rus.62.t: "[FROM.GetNameWithFlag] Refused To Help Us With The Environment"
  subject_rus.62.d: "[FROM.GetNameWithFlag] has refused to help us with the environment, finances will be allocated and restoration work will begin"
  subject_rus.62.a: "Sad"
+
+ subject_rus.63.t: "[PMR.GetNameWithFlag] Offers Us To Buy Weapons"
+ subject_rus.63.d: "[PMR.GetNameWithFlag] offers us to purchase a batch of rifles, which are stored in their warehouse in Kolbasna. It may not be of the best quality, but weapons are never superfluous, right?"
+ subject_rus.63.a: "We will buy weapons"
+ subject_rus.63.b: "No"
+ subject_rus.64.t: "[FROM.GetNameWithFlag] Refused To Buy Our Weapons"
+ subject_rus.64.d: "[FROM.GetNameWithFlag] agreed to purchase a batch of our weapons at the proposed price"
+ subject_rus.64.a: "Nice"
+ subject_rus.65.t: "[FROM.GetNameWithFlag] Refused To Buy Our Weapons"
+ subject_rus.65.d: "[FROM.GetNameWithFlag] refused to buy our weapons, arguing that they are outdated and their quality clearly does not meet the standards of the armed forces of this country"
+ subject_rus.65.a: "Sad"
 
 
 
